--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,9 @@ dioxus = { version = "0.4" }
 dioxus-logger = "0.4.1"
 dioxus-router = { version = "0.4", features = ["web"] }
 dioxus-web = { version = "0.4" }
+image = "0.24.7"
 log = "0.4.19"
+rxing = "0.4.9"
+wasm-bindgen = "0.2.87"
 wasm-logger = "0.2.0"
+web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlImageElement", "ImageData"] }
