--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,30 @@ authors = ["William Tange <will@tan.ge>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
+[[example]]
+name = "qrcode"
+
 [dependencies]
 console_error_panic_hook = "0.1.7"
-dioxus = { version = "0.4" }
+dioxus = "0.4.0"
 dioxus-logger = "0.4.1"
-dioxus-router = { version = "0.4", features = ["web"] }
-dioxus-web = { version = "0.4" }
+dioxus-web = "0.4.0"
 image = "0.24.7"
 log = "0.4.19"
+rand = "0.8.5"
 rxing = "0.4.9"
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = "0.4.37"
-wasm-logger = "0.2.0"
-web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlImageElement", "HtmlVideoElement", "ImageData", "Navigator", "MediaDevices", "MediaStream", "MediaStreamConstraints", "OffscreenCanvas", "OffscreenCanvasRenderingContext2d"] }
+
+[dependencies.web-sys]
+version = "0.3.64"
+features = [
+    "HtmlVideoElement",
+    "ImageData",
+    "MediaDevices",
+    "MediaStream",
+    "MediaStreamConstraints",
+    "Navigator",
+    "OffscreenCanvas",
+    "OffscreenCanvasRenderingContext2d",
+]
