--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ image = "0.24.7"
 log = "0.4.19"
 rand = "0.8.5"
 rxing = "0.4.9"
-wasm-bindgen = "0.2.87"
+serde = { version = "1.0", features = ["derive"] }
+wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.37"
 
 [dependencies.web-sys]
@@ -28,6 +29,7 @@ features = [
     "MediaDevices",
     "MediaStream",
     "MediaStreamConstraints",
+    "MediaTrackConstraints",
     "Navigator",
     "OffscreenCanvas",
     "OffscreenCanvasRenderingContext2d",
